[package]
name = "rook-parser"
version = "0.1.4"
edition = "2024"

description = "SQL parser layer for RookDB built using DataFusion sqlparser"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/RookDB/rook-parser"

exclude = [
    "Books/*",
    "assets/*",
    "MoMs/*",
    "Notes.md",
    "Questions.md",
    "Resources.md",
    "tests/*",
    "Cargo.lock"
]

[dependencies]
sqlparser = "0.61.0"